--- a/src/components/pages/Code/Code.module.css
+++ b/src/components/pages/Code/Code.module.css
@@ -60,9 +60,13 @@
 }
 
 .githubLink {
-    color: var(--color-link);
+    color: var(--color-text);
+    text-decoration: none;
+    font-weight: 100;
     bottom: 0;
-    
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--color-secondary); 
 }
 
 .subtitle {
@@ -79,6 +83,10 @@
 }
 
 @media screen and (max-width: 800px) {
+
+    .container {
+        align-items: center;
+    }
     
     .bodyText {
         line-height: normal;
@@ -88,7 +96,6 @@
     }
 
     .title {
-        padding-bottom: 10%;
         text-align: center;
     }
 
